--- a/src/test/resources/tst_manifests/maven/deps_no_trivial_with_ignore/pom.xml
+++ b/src/test/resources/tst_manifests/maven/deps_no_trivial_with_ignore/pom.xml
@@ -35,7 +35,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-jdbc-postgresql</artifactId> <!-- exhortignore-->
+      <artifactId>quarkus-jdbc-postgresql</artifactId> <!-- trustify-da-ignore-->
       <version>2.13.6.Final</version>
     </dependency>
   </dependencies>
