--- a/src/test/resources/tst_manifests/gradle-groovy/deps_with_ignore_named_params/build.gradle
+++ b/src/test/resources/tst_manifests/gradle-groovy/deps_with_ignore_named_params/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation "jakarta.validation:jakarta.validation-api:2.0.2"
     implementation "io.quarkus:quarkus-resteasy-multipart:2.13.7.Final"
     implementation "io.quarkus:quarkus-hibernate-orm-deployment:2.0.2.Final"
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17' // exhortignore
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17' // trustify-da-ignore
     implementation "com.acme:invented.dependency:1.0.0"
 
 }
