--- a/src/test/resources/tst_manifests/maven/deps_with_ignore_on_artifact/pom.xml
+++ b/src/test/resources/tst_manifests/maven/deps_with_ignore_on_artifact/pom.xml
@@ -10,7 +10,7 @@
   <dependencies>
     <dependency>
       <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId> <!--exhortignore-->
+      <artifactId>log4j</artifactId> <!--trustify-da-ignore-->
       <version>1.2.17</version>
     </dependency>
   </dependencies>
