--- a/src/test/resources/tst_manifests/maven/deps_with_ignore_on_group/pom.xml
+++ b/src/test/resources/tst_manifests/maven/deps_with_ignore_on_group/pom.xml
@@ -9,7 +9,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>log4j</groupId> <!--exhortignore-->
+      <groupId>log4j</groupId> <!--trustify-da-ignore-->
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
