--- a/src/test/resources/tst_manifests/maven/deps_with_ignore_on_wrong/pom.xml
+++ b/src/test/resources/tst_manifests/maven/deps_with_ignore_on_wrong/pom.xml
@@ -8,7 +8,7 @@
   <version>0.0.1</version>
 
   <dependencies>
-    <!--exhortignore-->
+    <!--trustify-da-ignore-->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
