--- a/src/test/resources/tst_manifests/pip/pip_requirements_txt_ignore/requirements.txt
+++ b/src/test/resources/tst_manifests/pip/pip_requirements_txt_ignore/requirements.txt
@@ -3,7 +3,7 @@ asgiref==3.4.1
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 chardet==4.0.0
-click==8.0.4 #exhortignore
+click==8.0.4 #trustify-da-ignore
 contextlib2==21.6.0
 fastapi==0.75.1
 Flask==2.0.3
@@ -14,7 +14,7 @@ importlib-metadata==4.8.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
-pydantic==1.9.2 # exhortignore
+pydantic==1.9.2 # trustify-da-ignore
 requests==2.25.1
 six==1.16.0 
 sniffio==1.2.0
