--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   annotations:
-    backstage.io/kuberqnetes-id: trustify-da-java-client
+    backstage.io/kubernetes-id: trustify-da-java-client
     github.com/project-slug: guacsec/trustify-da-java-client
     github.com/project-readme-path: README.md
     backstage.io/view-url: https://github.com/guacsec/trustify-da-java-client/blob/main/catalog-info.yaml
