fix: add missing gpg argument

--- a/pom.xml
+++ b/pom.xml
@@ -959,6 +959,7 @@ limitations under the License.]]>
                 </goals>
                 <configuration>
                   <gpgArguments>
+                    <arg>--batch</arg>
                     <arg>--pinentry-mode</arg>
                     <arg>loopback</arg>
                   </gpgArguments>
