--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>io.github.guacsec</groupId>
   <artifactId>trustify-da-java-client</artifactId>
-  <version>0.0.10-SNAPSHOT</version>
+  <version>0.0.11</version>
   <name>Trustify DA Java Client</name>
   <description>Trustify DA Java Client</description>
   <url>https://github.com/guacsec/trustify-da-java-client#readme</url>
@@ -97,7 +97,7 @@
     <url>https://github.com/guacsec/trustify-da-java-client</url>
     <connection>scm:git:git@github.com:guacsec/trustify-da-java-client.git</connection>
     <developerConnection>scm:git:git@github.com:guacsec/trustify-da-java-client.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v0.0.11</tag>
   </scm>
 
   <ciManagement>
