--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,12 @@
 version: 2
-updates
+updates:
   - package-ecosystem: "maven"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    exclude-paths:
+      - "src/test/**"
+  - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
